--- a/_includes/online-swc-schedule.html
+++ b/_includes/online-swc-schedule.html
@@ -9,7 +9,7 @@
       </tr>
         <tr>               <!-- row 2   -->
         <td>08:30</td>        <!-- time    -->
-        <td>Install Session</a></td>        <!-- content -->
+        <td>Install Session</td>        <!-- content -->
       </tr>
       <tr>               <!-- row 3   -->
         <td>09:00</td>        <!-- time    -->
@@ -38,7 +38,7 @@
     <table class="table table-striped">
        <tr>               <!-- row 2   -->
         <td>08:30</td>        <!-- time    -->
-        <td>Install Session</a></td>        <!-- content -->
+        <td>Install Session</td>        <!-- content -->
       </tr>
       
       <tr>               <!-- row 2   -->
@@ -68,10 +68,6 @@
   <div class="col-md-6"> <!-- left column -->
     <h3>Day 3</h3>
             <table class="table table-striped">
-       <tr>               <!-- row 2   -->
-        <td>08:30</td>        <!-- time    -->
-        <td>Install Session</a></td>        <!-- content -->
-      </tr>
       
       <tr>               <!-- row 2   -->
         <td>09:00</td>        <!-- time    -->
@@ -97,12 +93,7 @@
   </div>
   <div class="col-md-6"> <!-- right column -->
     <h3>Day 4</h3>
-<table class="table table-striped">
-       <tr>               <!-- row 2   -->
-        <td>08:30</td>        <!-- time    -->
-        <td>Install Session</a></td>        <!-- content -->
-      </tr>
-      
+<table class="table table-striped">      
       <tr>               <!-- row 2   -->
         <td>09:00</td>        <!-- time    -->
         <td><a href="https://swcarpentry.github.io/git-novice/">Version Control with Git</a></td>        <!-- content -->
